# hyrr

./: .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  .shellcheckrc  .sops.yaml  .yamllint  404.html  CHANGELOG.md  CITATION.cff  CLAUDE.md  COMPLIANCE.md  CONTRIBUTING.md  DISCLAIMER.md  HANDOFF.md  LICENSE  PRIVACY.md  README.md  TERMS.md  _typos.toml  development-plan.md  flake.nix  hyrr.json  index.html  justfile.project  manifest.webmanifest  mkdocs.yml  package-lock.json  package.json  pyproject.toml  release-please-config.json  vitest.config.ts
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/scripts/: init-git.sh  init-precommit.sh  post-attach.sh  setup-git-conf.sh
.github/: dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  db-release.yml  deploy-eth.yml  deploy-frontend.yml  deploy-staging-smoke.yml  docs.yml  e2e-tauri.yml  e2e.yml  promote-to-prod.yml  release-hyrr-mcp.yml  release-please.yml  release.yml  tauri-build.yml
.github/workflows-archive/: promote-to-prod.yml
assets/: dist-js-7xIasUsp.js  dist-js-C0sDa_hd.js  dist-js-D3bDEFWs.js  dist-js-D5fG-g8P.js  dist-js-DAzy2hiO.js  dist-js-DMUSAFj7.js  event-D5o_fPPl.js  html2canvas-B-v7eCaG.js  html2canvas-BQRC_c5F.js  html2canvas-Bxg_EC7n.js  html2canvas-D7FzY9eY.js  html2canvas-DQp99AvS.js  html2canvas-Dd-_aFV9.js  html2canvas-DeLl0MFi.js  html2canvas-DlYZYcUu.js  html2canvas-DnJbRYCb.js  html2canvas-GZWIBfEC.js  html2canvas-Kvm449TO.js  html2canvas-iKXJ9jjs.js  html2canvas-m9LnjtU1.js  hyrr_wasm-AzrAG2aZ.js  hyrr_wasm-B4wWYMY-.js  hyrr_wasm-BJDQK2oR.js  hyrr_wasm-BPmLOSRx.js  hyrr_wasm-BQTJEfBh.js  hyrr_wasm-BufA1M0r.js  hyrr_wasm-ClUH5b0d.js  hyrr_wasm-CzUIJU8E.js  hyrr_wasm-DF_7b9pf.js  hyrr_wasm-DR5fFIrl.js  hyrr_wasm-DYpT4miR.js  hyrr_wasm-R3oAOdrn.js  hyrr_wasm-fBn3AZjC.js  hyrr_wasm_bg-BJz7s27m.wasm  hyrr_wasm_bg-C-ZBmxm9.wasm  hyrr_wasm_bg-CAekT3FE.wasm  hyrr_wasm_bg-CT16e8lX.wasm  hyrr_wasm_bg-DxePR21n.wasm  hyrr_wasm_bg-s33P1rcq.wasm  index--_ihr4UT.js  (+23 more)
core/: Cargo.toml  build.rs
core/examples/: probe_bateman.rs  probe_chain_solver_58.rs  probe_cooltime.rs  probe_e2e_58.rs  probe_solve_chain_58.rs  probe_stopping.rs  probe_table.rs  scan_sc44.rs
core/src/: bateman.rs  chains.rs  compute.rs  config_url.rs  constants.rs  data_dir.rs  data_fetch.rs  db.rs  formula.rs  interpolation.rs  lib.rs  materials.rs  math.rs  matrix_exp.rs  neutron.rs  production.rs  projectile.rs  stopping.rs  trace_schema.rs  types.rs
core/src/mcp/: cache.rs  dataset.rs  mod.rs  tools.rs  transport.rs
core/tests/: alpha_stopping_nist_canary.rs  compound_stopping.rs  density_override.rs  embedded_data_store.rs  f18_production.rs  material_registry.rs  mcp_cold_start.rs  mcp_layer_selection.rs  mcp_structured_export.rs  neutron_activation.rs  projectile_matrix.rs
data/: build_chunks.py  build_db.py  build_parquet.py
data/parquet/: catalog.json
data/parsers/: abundance.py  decay.py  stopping.py  talys.py  tendl.py
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  main.rs
desktop/src-tauri/src/mcp/: mod.rs  tools.rs  transport.rs
desktop/tests/: package-lock.json  package.json  wdio.conf.js
docs/: 404.html  index.html  index.md  objects.inv  sitemap.xml
docs/adr/: 0001-mcp-single-ssot-and-install-channels.md  0002-catalog-ssot-data-layout.md  0002-release-please.md  0003-neutron-activation.md
docs/api/: db.md  materials.md  models.md  native-bridge.md  output.md  plotting.md  production.md  stopping.md
docs/development/: architecture.md  contributing.md
docs/frontend/: architecture.md  webapp.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: cli.md  use-cases.md
docs/maintainers/: KEY_ROTATION.md  TESTING.md
docs/search/: search_index.json
frontend/: .env.production  .gitignore  CONTRIBUTING.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.setup.ts
frontend/e2e/: csv-exports.spec.ts  current-profile.spec.ts  data-resilience.spec.ts  eob-eoc-table.spec.ts  isotope-depth.spec.ts  layer-clear.spec.ts  material-define-rows.spec.ts  material-form-redesign.spec.ts  material-pt.spec.ts  material-soda-lime.spec.ts  material-supplier-chips.spec.ts  presets.spec.ts  responsive.spec.ts  share-custom-material.spec.ts  simulation.spec.ts  smoke.spec.ts
frontend/logos/: gen_wave_logo.py
hyrr-mcp/: Cargo.toml
hyrr-mcp/.cargo/: config.toml
hyrr-mcp/src/: main.rs
infra/: README.md
landing/: index.html
mcp/: package.json
notebooks/: 01_hyrr_quickstart.ipynb  01_hyrr_quickstart.py  02_stacked_target.ipynb  03_export_serialization.ipynb  04_parameter_sweep.ipynb  05_current_profile.ipynb  06_straggling_diagnostics.ipynb  06_straggling_diagnostics.py  07_production_depth.ipynb  07_production_depth.py  08_beam_profile.ipynb  08_beam_profile.py  09_3d_geometry.ipynb  09_3d_geometry.py  10_neutron_activation.ipynb  10_neutron_activation.py  11_target_capsule_3d.ipynb  11_target_capsule_3d.py
py/: Cargo.toml
py-mcp/: .gitignore  Cargo.toml  README.md  pyproject.toml
py-mcp/python/hyrr_mcp/: __init__.py  __main__.py
py-mcp/src/: lib.rs
py/src/: lib.rs
scripts/: bootstrap-eth-secrets.sh  build-native.sh  check-lockfiles.sh  copy-frontend-data.sh  deploy-eth.sh  deploy-staging-manual.sh  dev.sh  mcp_parity_fixture.jsonl  mcp_parity_test.sh
secrets/: eth-deploy.sops.env
tests/: __init__.py  conftest.py  test_api.py  test_chains.py  test_cli.py  test_compute.py  test_current_profile.py  test_db.py  test_example.py  test_geometry.py  test_materials.py  test_models.py  test_neutrons.py  test_output.py  test_performance.py  test_plotting.py  test_production.py  test_projectile.py  test_serialization.py  test_stopping.py  test_straggling.py  test_sweep.py  test_talys_parser.py
tst/: index.html  manifest.webmanifest  sw.js
wasm/: Cargo.toml
wasm/src/: lib.rs  trace.rs
worker/: package-lock.json  package.json  wrangler.toml
(+1485 files in other folders)
