[project]
name = "hyrr"
version = "0.1.0"
description = "Hierarchical Yield and Radionuclide Rates — isotope production in stacked target assemblies"
authors = [
    {name = "MorePET"},
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["nuclear", "isotope", "production", "stopping-power", "radionuclide", "physics"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=2.0",
    "scipy>=1.14",
    "polars>=1.0",
    "matplotlib>=3.9",
    "pymat @ git+https://github.com/MorePET/py-mat.git@latest",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.3",
    "mypy>=1.10",
    "pre-commit>=3.6",
    "ipykernel>=6.0",
    "jupyter>=1.0",
]
plotting = [
    "plotly>=5.17",
]
all = ["hyrr[dev,plotting]"]

[project.scripts]
hyrr = "hyrr.cli:main"

[project.urls]
Repository = "https://github.com/MorePET/hyrr"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hyrr"]

[dependency-groups]
dev = [
    "hatchling>=1.25",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "rich>=13.0.0",
]

# Ruff
[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["hyrr"]

# MyPy
[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["matplotlib.*", "plotly.*", "pymat.*"]
ignore_missing_imports = true

# Pytest
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]

# Coverage
[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
