[project]
name = "hyrr"
version = "0.2.0"
description = "Hierarchical Yield and Radionuclide Rates — isotope production in stacked target assemblies"
authors = [
    {name = "MorePET"},
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["nuclear", "isotope", "production", "stopping-power", "radionuclide", "physics"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=2.0",
    "scipy>=1.14",
    "polars>=1.0",
    "matplotlib>=3.9",
    "py-materials>=2.0.5",
    "xlsxwriter>=3.2.9",
    "pycatima>=1.9",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "nbmake>=1.5",
    "ruff>=0.3",
    "pyright>=1.1",
    "pre-commit>=3.6",
    "ipykernel>=6.0",
    "jupyter>=1.0",
]
server = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]
pandas = [
    "pandas>=2.0",
]
plotting = [
    "plotly>=5.17",
]
geometry = [
    "build123d>=0.7",
    "tetgen>=0.6",
    "meshio>=5.3",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "mkdocs-jupyter>=0.24",
]
all = ["hyrr[dev,pandas,plotting,docs,server]"]

[project.scripts]
hyrr = "hyrr.cli:main"

[project.urls]
Repository = "https://github.com/MorePET/hyrr"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hyrr"]

[dependency-groups]
dev = [
    "build123d>=0.10.0",
    "hatchling>=1.25",
    "ipykernel>=6.31.0",
    "jupyter>=1.1.1",
    "jupytext>=1.19.1",
    "nbmake>=1.5",
    "pandas>=2.0",
    "plotly>=6.6.0",
    "pyright>=1.1",
    "pytest>=9.0.2",
    "pytest-benchmark>=4.0",
    "pytest-cov>=7.0.0",
    "rich>=13.0.0",
    "ruff>=0.8",
    "tetgen>=0.8.3",
]

# Ruff
[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["hyrr"]

# Pyright
[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportMissingImports = "warning"
reportAttributeAccessIssue = false
reportReturnType = false
reportArgumentType = false
reportRedeclaration = false
reportAssignmentType = false
venvPath = "."
venv = ".venv"

# Pytest
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests", "notebooks"]
markers = [
    "integration: end-to-end integration tests requiring parquet data",
    "benchmark: performance benchmark tests",
    "nbmake: notebook execution smoke tests",
]

# Coverage
[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
