[package]
name = "hyrr-core"
version = "0.12.0"
edition = "2021"
description = "Rust physics core for HYRR — Hierarchical Yield and Radionuclide Rates"
license = "MIT"
# Keep nix-libiconv dev workaround out of sdists that bundle this crate as a
# path-dep (notably the py-mcp maturin wheel).
exclude = [".cargo/**"]

[features]
default = ["parquet-store"]
parquet-store = ["dep:nucl-parquet"]
mcp = ["parquet-store"]
embed-data = ["parquet-store", "dep:tempfile"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
nucl-parquet = { path = "../nucl-parquet/clients/rs/nucl-parquet", optional = true, default-features = false }
regex = "1"
flate2 = { version = "1.1.9", default-features = false, features = ["rust_backend"] }

# Native-only deps for the lazy data-fetch path (#52). Gated so wasm32
# consumers don't pull reqwest/tar/zstd into their dependency graph.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tar = "0.4"
zstd = "0.13"
fs2 = "0.4"
# `home` is the platform-correct way to resolve $HOME for redacting paths
# at the Tauri/IPC boundary (#173). Pure-Rust, tiny, no transitive
# baggage. Native-only because wasm32 has no filesystem.
home = "0.5"

# tempfile is used at runtime for embed-data (stopping dir extraction)
# and at test time for isolated $HOME tests.
[dependencies.tempfile]
version = "3"
optional = true

[build-dependencies]
tar = "0.4"

[dev-dependencies]
approx = "0.5"
tempfile = "3"
