[package]
name = "hyrr-core"
version = "0.16.1"
edition = "2021"
description = "Rust physics core for HYRR — Hierarchical Yield and Radionuclide Rates"
license = "MIT"
# Keep nix-libiconv dev workaround out of sdists that bundle this crate as a
# path-dep (notably the py-mcp maturin wheel).
exclude = [".cargo/**"]

[features]
default = ["parquet-store"]
parquet-store = ["dep:nucl-parquet"]
# Structured export (#427) needs arrow/parquet for the parquet resource and
# base64 to embed it in MCP content blocks — pulled in only with `mcp`.
mcp = ["parquet-store", "dep:arrow", "dep:parquet", "dep:base64"]
embed-data = ["parquet-store", "dep:tempfile"]
# Structured tracing → local JSONL via guardrails-trace (#159). Native-only —
# the dep is fs/stderr based; the `tracing` facade itself is wasm-safe and
# always present, so WASM emits the same events into its own ring subscriber.
trace-jsonl = ["dep:guardrails-trace"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# Tracing facade (#159). Wasm-safe — emitting an event is a no-op without an
# installed subscriber, so this is always present; the JSONL subscriber (native)
# and the ring subscriber (wasm) are wired by the respective entrypoints.
tracing = { version = "0.1", features = ["attributes"] }
nucl-parquet = { path = "../nucl-parquet/clients/rs/nucl-parquet", optional = true, default-features = false }
regex = "1"
flate2 = { version = "1.1.9", default-features = false, features = ["rust_backend"] }
# Parquet/Arrow writer + base64 for the #427 dataset tools. Versions match
# nucl-parquet's (already in the tree). `default-features = false` keeps this to
# the array/schema/record-batch core nucl-parquet already pulls — no csv/ipc/json
# umbrella. mcp-only.
arrow = { version = "54", optional = true, default-features = false }
parquet = { version = "54", optional = true, default-features = false, features = ["arrow"] }
base64 = { version = "0.22", optional = true }

# Native-only deps for the lazy data-fetch path (#52). Gated so wasm32
# consumers don't pull reqwest/tar/zstd into their dependency graph.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tar = "0.4"
zstd = "0.13"
fs2 = "0.4"
# `home` is the platform-correct way to resolve $HOME for redacting paths
# at the Tauri/IPC boundary (#173). Pure-Rust, tiny, no transitive
# baggage. Native-only because wasm32 has no filesystem.
home = "0.5"
# guardrails-trace (#159): one-call observability spine — EnvFilter + structured
# JSONL — for native binaries (CLI/MCP/Tauri). Pulled only with `trace-jsonl`
# (it's tracing-appender/fmt based → native-only). Pinned by rev for a
# reproducible Cargo.lock across hyrr-mcp/desktop; flip to a tag once the
# upstream PR (gerchowl/guardrails#24) merges.
guardrails-trace = { git = "https://github.com/gerchowl/guardrails", package = "guardrails-trace", rev = "218b996612839e277a4515f8183bf9102189b362", optional = true }

# tempfile is used at runtime for embed-data (stopping dir extraction)
# and at test time for isolated $HOME tests.
[dependencies.tempfile]
version = "3"
optional = true

[build-dependencies]
tar = "0.4"

[dev-dependencies]
approx = "0.5"
tempfile = "3"
