[package]
name = "hyrr-core"
version = "0.17.0"
edition = "2021"
description = "Rust physics core for HYRR — Hierarchical Yield and Radionuclide Rates"
license = "MIT"
# Keep nix-libiconv dev workaround out of sdists that bundle this crate as a
# path-dep (notably the py-mcp maturin wheel).
exclude = [".cargo/**"]

[features]
default = ["parquet-store"]
parquet-store = ["dep:nucl-parquet"]
# Structured export (#427) needs arrow/parquet for the parquet resource and
# base64 to embed it in MCP content blocks — pulled in only with `mcp`.
mcp = ["parquet-store", "dep:arrow", "dep:parquet", "dep:base64"]
embed-data = ["parquet-store", "dep:tempfile"]
# Structured tracing → local JSONL via guardrails-trace (#159). Native-only —
# the dep is fs/stderr based; the `tracing` facade itself is wasm-safe and
# always present, so WASM emits the same events into its own ring subscriber.
trace-jsonl = ["dep:guardrails-trace"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# Tracing facade (#159). Wasm-safe — emitting an event is a no-op without an
# installed subscriber, so this is always present; the JSONL subscriber (native)
# and the ring subscriber (wasm) are wired by the respective entrypoints.
tracing = { version = "0.1", features = ["attributes"] }
nucl-parquet = { path = "../nucl-parquet/clients/rs/nucl-parquet", optional = true, default-features = false }
regex = "1"
flate2 = { version = "1.1.9", default-features = false, features = ["rust_backend"] }
# Parquet/Arrow writer + base64 for the #427 dataset tools. Versions match
# nucl-parquet's (already in the tree). `default-features = false` keeps this to
# the array/schema/record-batch core nucl-parquet already pulls — no csv/ipc/json
# umbrella. mcp-only.
arrow = { version = "54", optional = true, default-features = false }
parquet = { version = "54", optional = true, default-features = false, features = ["arrow"] }
base64 = { version = "0.22", optional = true }

# Native-only deps for the lazy data-fetch path (#52). Gated so wasm32
# consumers don't pull reqwest/tar/zstd into their dependency graph.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tar = "0.4"
zstd = "0.13"
fs2 = "0.4"
# `home` is the platform-correct way to resolve $HOME for redacting paths
# at the Tauri/IPC boundary (#173). Pure-Rust, tiny, no transitive
# baggage. Native-only because wasm32 has no filesystem.
home = "0.5"
# guardrails-trace (#159): one-call observability spine — EnvFilter + structured
# JSONL — for native binaries (CLI/MCP/Tauri). Pulled only with `trace-jsonl`
# (it's tracing-appender/fmt based → native-only). Pinned by rev for a
# reproducible Cargo.lock across hyrr-mcp/desktop; flip to a tag once the
# upstream PR (gerchowl/guardrails#24) merges.
guardrails-trace = { git = "https://github.com/gerchowl/guardrails", package = "guardrails-trace", rev = "bdec0d0b0cc2ca1d534fce46018b304aa0b504f9", optional = true }

# tempfile is used at runtime for embed-data (stopping dir extraction)
# and at test time for isolated $HOME tests.
[dependencies.tempfile]
version = "3"
optional = true

[build-dependencies]
tar = "0.4"

[dev-dependencies]
approx = "0.5"
tempfile = "3"

# Clippy gate (#484). `cargo clippy` is now a required `nix flake check`, so we
# deny all clippy warnings — then allow the handful that are intentional in a
# numerical/physics codebase. `priority = -1` makes the deny-all the base level
# so the specific `allow`s (default priority 0) win over it. The auto-fixable
# real lints (needless_borrow, redundant_closure, …) were cleaned up when the
# gate landed; these allows are the deliberate, reviewed exceptions:
[lints.clippy]
all = { level = "deny", priority = -1 }
# Physics entry points legitimately carry many parameters (energy grid, material
# refs, projectile, options) — bundling into structs hurts call-site clarity.
too_many_arguments = "allow"
# ComputeError/StoppingError are rich enums returned widely; boxing every Result
# to shrink the Err variant trades real ergonomics for a microscopic size win.
result_large_err = "allow"
# Interpolation/table accessors return genuinely nested tuple types; aliases
# would scatter the shape away from where it's read.
type_complexity = "allow"
# `from_str` is the established constructor name across the type surface here;
# renaming to satisfy the std-trait-confusion lint would be a breaking API churn.
should_implement_trait = "allow"
# Numerical guards like `!(max_activity > 0.0)` are deliberate NaN handling —
# they intentionally differ from `<= 0.0` (which would treat NaN the other way).
neg_cmp_op_on_partial_ord = "allow"
# Numerical loops that index parallel arrays by position read more clearly as
# indexed loops than as zipped iterators.
needless_range_loop = "allow"
# `is_some()`/`is_none()` guards immediately before an `unwrap()` are kept for
# readability in the chain solver rather than restructured into `if let`.
unnecessary_unwrap = "allow"
# Descending sort via an explicit comparator is clearer than `Reverse(key)`.
unnecessary_sort_by = "allow"
