[package]
name = "hyrr-mcp"
version = "0.17.0"
edition = "2021"
description = "HYRR MCP server — stdio JSON-RPC for radio-isotope production queries"
license = "MIT"

[[bin]]
name = "hyrr-mcp"
path = "src/main.rs"

[dependencies]
hyrr-core = { path = "../core", features = ["mcp", "trace-jsonl"] }
nucl-parquet = { path = "../nucl-parquet/clients/rs/nucl-parquet", features = ["fetch"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
