[package]
name = "hyrr-mcp-py"
version = "0.1.0"
edition = "2021"
description = "PyO3 wrapper around hyrr-core's MCP server for uvx distribution"
license = "MIT"

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
hyrr-core = { path = "../core", features = ["mcp"] }
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py311"] }
