[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "hyrr-mcp"
version = "0.1.0"
description = "HYRR MCP server — stdio JSON-RPC for radio-isotope production queries"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "MorePET" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.scripts]
hyrr-mcp = "hyrr_mcp:main"

[project.urls]
Homepage = "https://github.com/exoma-ch/hyrr"
Issues = "https://github.com/exoma-ch/hyrr/issues"

[tool.maturin]
python-source = "python"
module-name = "hyrr_mcp._native"
features = ["pyo3/extension-module"]
