[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "hyrr-mcp"
version = "0.1.0"
description = "HYRR MCP server — stdio JSON-RPC for radio-isotope production queries"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "MorePET" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["mcp", "model-context-protocol", "claude", "nuclear", "isotope", "cyclotron", "radionuclide"]

[project.scripts]
hyrr-mcp = "hyrr_mcp:main"

[project.urls]
Homepage = "https://github.com/exoma-ch/hyrr"
Repository = "https://github.com/exoma-ch/hyrr"
Issues = "https://github.com/exoma-ch/hyrr/issues"
"Source — Rust MCP module" = "https://github.com/exoma-ch/hyrr/tree/main/core/src/mcp"

[tool.maturin]
python-source = "python"
module-name = "hyrr_mcp._native"
features = ["pyo3/extension-module"]
