[package]
name = "hyrr-py"
version = "0.1.0"
edition = "2024"
description = "PyO3 bindings for hyrr-core — native Python extension"
license = "MIT"

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
hyrr-core = { path = "../core" }
pyo3 = { version = "0.28", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
