[package]
name = "hyrr-wasm"
version = "0.1.0"
edition = "2024"
description = "WASM bindings for hyrr-core — browser compute backend"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
hyrr-core = { path = "../core", default-features = false }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"
lto = true
