[package]
name = "hyrr-desktop"
version = "0.8.0"
description = "HYRR Desktop — offline nuclear data simulation"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hyrr-core = { path = "../../core", features = ["mcp", "embed-data"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
